--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+beautifulsoup4==4.3.2
+Embedly==0.5.0
+httplib2==0.9.1
+oauthlib==0.7.2
 requests==2.4.3
-requests_oauthlib==0.4.1
+requests-oauthlib==0.4.1
 six==1.7.3
