--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
-beautifulsoup4==4.3.2
 Embedly==0.5.0
+Flask==0.10.1
+Jinja2==2.7.3
+MarkupSafe==0.23
+Werkzeug==0.10.1
+argparse==1.3.0
+beautifulsoup4==4.3.2
+django-filter==0.9.2
 httplib2==0.9.1
+itsdangerous==0.24
+numpy==1.9.1
 oauthlib==0.7.2
+pbr==0.10.7
+pdfminer==20140328
 requests==2.4.3
 requests-oauthlib==0.4.1
 six==1.7.3
+stevedore==1.2.0
+tweepy==3.2.0
+virtualenv==1.11.6
+virtualenv-clone==0.2.5
+virtualenvwrapper==4.3.2
+wsgiref==0.1.2
